--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<form method="post" action="/home/postdata">
+    <button type="submit">Send POST Request</button>
+</form>
